# github-app-example

./: .gitignore  README.md  pyproject.toml  requirements.txt
reposcan/: gitwrapper.py  main.py
